jks file and minor changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,18 +2,18 @@
     <string name="app_name" translatable="true">Capstone</string>
     <string name="action_settings" translatable="true">Settings</string>
     <string name="search_hint" translatable="true">Type to search</string>
-
-
+    <string name="Type_description">Type description</string>
+    <string name="Type_amount">Type amount</string>
     <string name="title_text">Easy Expenses\nSign In</string>
     <string name="signed_out">Signed out</string>
     <string name="signed_in_fmt">Signed in as: %s</string>
-
+    <string name="default_text">00</string>
     <string name="loading">Loading…</string>
 
     <!-- Button labels -->
     <string name="ok" translatable="true">Ok</string>
     <string name="cancel" translatable="true">Cancel</string>
-
+    <string name="launcher">Launcher Image</string>
     <string name="widget_add_button" translatable="false">+</string>
     <string name="add_expense_description" translatable="true">add expense</string>
     <string name="pref_budget" translatable="true">Monthly budget</string>
