--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="signed_in_fmt">Signed in as: %s</string>
     <string name="default_text">00</string>
     <string name="loading">Loading…</string>
+    <string name="available">Available</string>
 
     <!-- Button labels -->
     <string name="ok" translatable="true">Ok</string>
